# django_app

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/config/: settings.py  urls.py
app/store/: admin.py  forms.py  models.py  urls.py  views.py
app/store/management/commands/: fill_db.py
app/store/migrations/: 0001_initial.py
app/store/templates/store/: add_product.html  edit_product.html  index.html  product.html  products.html  remove_product.html
app/store/utils/: gen_entities.py
app/templates/: base.html
app/templates/includes/: header.html
